[package]
name = "mc-ledger-distribution"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "ledger-distribution"
path = "src/main.rs"

[dependencies]
mc-api = { path = "../../api" }
mc-common = { path = "../../common", features = ["loggers"] }
mc-ledger-db = { path = "../../ledger/db" }
mc-transaction-core = { path = "../../transaction/core" }
mc-util-telemetry = { path = "../../util/telemetry", features = ["jaeger"] }

clap = { version = "3.1", features = ["derive", "env"] }
dirs = "4.0"
displaydoc = "0.2"
protobuf = "2.27.1"
retry = "1.3"
aws-sdk-s3 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.2"
