[package]
name = "mc-ledger-distribution"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "ledger-distribution"
path = "src/main.rs"

[dependencies]
mc-api = { path = "../../api" }
mc-common = { path = "../../common", features = ["loggers"] }
mc-ledger-db = { path = "../../ledger/db" }
mc-ledger-sync = { path = "../../ledger/sync" }
mc-transaction-core = { path = "../../transaction/core" }
mc-util-serial = { path = "../../util/serial" }
mc-util-telemetry = { path = "../../util/telemetry", features = ["jaeger"] }

dirs = "4.0"
displaydoc = "0.2"
protobuf = "2.22.1"
rdkafka = "0.28"
retry = "1.3"
# TODO: Replace with https://github.com/awslabs/aws-sdk-rust when it is ready.
rusoto_core = { version = "0.42.0", features = ["rustls"], default_features = false }
rusoto_s3 = { version = "0.42.0", features = ["rustls"], default_features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.2"
