[package]
name = "mc-util-metrics"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[dependencies]
mc-common = { path = "../../common", features = ["log"] }

chrono = "0.4"
grpcio = "0.10" # TODO: Remove
lazy_static = "1.4"
prometheus = "0.13"
prost = "0.10"
protobuf = "2.27"  # TODO: Remove
serde_json = "1.0"
tonic = "0.7"
