[package]
name = "mc-fog-ledger-enclave-trusted"
version = "1.2.0-pre0"
authors = ["MobileCoin"]
edition = "2018"
resolver = "2"

# Declare as an empty workspace to not confuse cargo.
[workspace]

[lib]
crate-type = ["staticlib"]

[features]
sgx-sim = [
    "mc-attest-verifier/sgx-sim"
]
ias-dev = [
    "mc-attest-verifier/ias-dev"
]

[dependencies]
# mobilecoin
mc-attest-core = { path = "../../../../attest/core", default-features = false }
mc-attest-verifier = { path = "../../../../attest/verifier", default-features = false }
mc-enclave-boundary = { path = "../../../../enclave-boundary" }
mc-util-serial = { path = "../../../../util/serial"}
mc-sgx-compat = { path = "../../../../sgx/compat", features = ["sgx"] }
mc-sgx-debug-edl = { path = "../../../../sgx/debug-edl" }
mc-sgx-enclave-id = { path = "../../../../sgx/enclave-id" }
mc-sgx-panic-edl = { path = "../../../../sgx/panic-edl" }
mc-sgx-report-cache-api = { path = "../../../../sgx/report-cache/api" }
mc-sgx-slog = { path = "../../../../sgx/slog", features = ["sgx"] }
mc-sgx-slog-edl = { path = "../../../../sgx/slog-edl" }
mc-sgx-types = { path = "../../../../sgx/types" }

# fog
mc-fog-ledger-enclave-api = { path = "../api", default-features = false }
mc-fog-ledger-enclave-edl = { path = "../edl" }
mc-fog-ledger-enclave-impl = { path = "../impl", default-features = false }
mc-fog-ocall-oram-storage-edl = { path = "../../../ocall_oram_storage/edl" }
mc-fog-ocall-oram-storage-trusted = { path = "../../../ocall_oram_storage/trusted" }

# third-party
lazy_static = "1.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# And these to force features for SGX
mbedtls = { version = "0.8.1", default-features = false, features = ["no_std_deps", "aesni", "force_aesni_support", "rdrand"] }
mbedtls-sys-auto = { version = "2.26.1", default-features = false, features = ["custom_threading"] }

[build-dependencies]
mc-util-build-sgx = { path = "../../../../util/build/sgx" }
mc-util-build-script = { path = "../../../../util/build/script" }

cargo-emit = "0.2.1"
pkg-config = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
rpath = false
lto = true
debug-assertions = false
overflow-checks = false

[patch.crates-io]
# Fork to use latest dependencies.
bulletproofs = { git = "https://github.com/remoun/bulletproofs.git", branch = "mobilecoin" }

# Patched to disable the cpuid instruction because that is incompatible with our sgx builds.
cpufeatures = { git = "https://github.com/mobilecoinfoundation/RustCrypto-utils.git", branch = "mobilecoin" }

# Fix issues with recent nightlies, bump curve25519-dalek version
curve25519-dalek = { git = "https://github.com/remoun/curve25519-dalek", branch = "mobilecoin" }
ed25519-dalek = { git = "https://github.com/remoun/ed25519-dalek", branch = "mobilecoin" }

# Use SimpleHkdf
hkdf = { git = "https://github.com/remoun/KDFs.git", branch = "add-simple" }

# Our patches for newer bindgen, no-std
mbedtls = { git = "https://github.com/mobilecoinofficial/rust-mbedtls.git", branch = "mc-develop" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinofficial/rust-mbedtls.git", branch = "mc-develop" }

# packed_simd_2 has unreleased fixes for our nightly version
packed_simd_2 = { git = "https://github.com/rust-lang/packed_simd.git", rev = "f60e900f4ceb71303baa37ff8b41ee7d490c01bf" }

# Fork to use latest dependencies.
schnorrkel-og = { git = "https://github.com/remoun/schnorrkel.git", branch = "mobilecoin" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", branch = "master" }

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/remoun/x25519-dalek.git", branch = "mobilecoin" }
